tests/expect/error/on-output/symbol-already-declared.nva
// the obvious case - explicit redeclarations
x: int;
x: str;